feat: Add default system prompt and improve default villager entry creation